--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -5,14 +5,10 @@
 
 +++CALENDAR
 1234567
-XXXXXXX
-XXXXXXX
-XXXXXXX
-XXXXXXX
-
-XXXXXXX
-XXXXXXX
-XXX
+XXXXXXX XXXXXXX
+XXXXXXX XXXXXXX
+XXXXXXX XXXXXX
+XXXXXXX 
 
 ++++Evil Session 2 Notes:
 The crew had supplied food to tide over the refugee camp for a few days before they persuaded the [Marines] to let them join along when they departed.
@@ -195,7 +191,7 @@ Carpenters completed the cannon mounts on the Sailing ship
   Kreiger buys [Fargrim] the Dwarf wizard for 35g who studied at Nowa Huta
   Croaker buys [Thia] a Wood Elf Female charismatic for 40g - Fiore - Fisher
   Grogar buys [Yevelda] a half orc female dockworker for 50g - Sailing proficiency
-  Vulcan buys half orc male farmer for 40g
+  Vulcan buys [Krusk] half orc male farmer for 40g
   
   defeated Don Krieg in the arena, and the town is now fully aware. 
   
@@ -211,11 +207,30 @@ Carpenters completed the cannon mounts on the Sailing ship
  [Lightning] joins the crew envious of thier wealth
  [Queen Larissa] thrown overboard between Arabasta and Gorda
  
- 18g - kriegs men
- 15g - [Taman]
- 25g lightning
- 
- going to the blooming orchid, Anton, Lightning and Darvin head behind the brothel
+ going to the blooming orchid in [Gorda], Anton, Lightning and Darvin head behind the brothel
  
  Anton and Lightning gets charmed, and spend a night 20g each
  Grogar gets charmed
+ 
+++++Session 19 notes:
+Croaker - Thia - Darvin - Vulcan - Fargrim waiting by the blooming orchid
+
+Kidnapped Greg from his home - put him in the brig on the ship - tortured him that night into revealing where Martin went.
+
+"2 horses to the barn ma mule yea"
+
+Add enchanter shop to Ak'anon
+
+Croaker wagers 100g that Edan wins
+Kreiger wagers 200g that Edan wins
+        wagers 100g that Grogar gets second
+Vulcan wagers 100g that Edan wins
+Edan wagers 500g that he himself wins
+[Taman] wagers 15g that Edan wins
+Entries:
+Grogar - wagers 20p 45g that Grogar gets 2nd place
+Anton - 
+Lightning - 
+Edan - 
+
+Finals: Edan - Grogar - Grom Malamoog - Robert Culliford
