adding more Gorda content

--- a/OneWiki/data/3 Helms Deep.wiki
+++ b/OneWiki/data/3 Helms Deep.wiki
@@ -2,6 +2,8 @@
 
 Formerly known as Mayara, the Bandits of Deception slew the [King Jor Doken] and claimed it as their own.
 
+Mayor Ubring receives word from [Marines] who came with him that have communicated with HQ that members of [Don Kreig]'s men have been increasingly attacking marine ships.
+
 Populous:
     [Royal Armoror Grix] - Royal Adviser and in charge when King Tri-Helm is away
     Nobleman [Garney] - In charge of real estate and establishments
