--- a/OneWiki/data/Tiamat.wiki
+++ b/OneWiki/data/Tiamat.wiki
@@ -3,4 +3,11 @@
 God of wealth, greed, vengence (pg 10 of DM handbook)
 Lawful Evil
 Oversees [Gorda]
+    resides in the [Cave of Gorda]
 Symbol: Five-pointed star with curved points
+
+
+Dragons were banished from the world by fusing them into one, and buried deep below Gorda. This is where Tiamat resides.
+
+https://ii.yuki.la/e/d5/cb25ff3123d78f35f2bb62e9b866fc33338a6a5ece06c84d6e585e8682111d5e.png
+(or see local saved image for stats)
