--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -7,8 +7,8 @@
 1234567
 XXXXXXX XXXXXXX
 XXXXXXX XXXXXXX
-XXXXXXX XXXXXX
-XXXXXXX 
+XXXXXXX XXXXXXX
+XXXXXXX XX
 
 ++++Evil Session 2 Notes:
 The crew had supplied food to tide over the refugee camp for a few days before they persuaded the [Marines] to let them join along when they departed.
@@ -228,3 +228,26 @@ Lightning -
 Edan - 
 
 Finals: Edan - Grogar - Grom Malamoog - Robert Culliford
+
+++++Session 20 notes:
+haggles Leeran down to 5500g per fruit
+
+[Krieger] eats the Dragon fruit
+[Croaker] eats the Bear fruit
+
+[Edan] achieves attunement level 2 of Regdar's Radiant hilt
+-drains Greg 3 times to charge the sword.
+
+5 horses found in the cave of tiamat
+-group tames 5 Draft horses
+-loaded onto ship
+
+Lander Koll defeated by Lightning with help of Grogar and Edan
+-Lander was furious about the death of his friend Ron Schnopps
+-Lander Koll is drained -3 CON to restore the power to Regdars Radiant hilt
+
+Lightning fishes with the corpse of Lander Koll and attracts 3 sharks which are then killed.
+
+Croaker discovers the nature of his Fruit power
+
+the group escorts Robert Culliford & crew to the archipalego of Mahogany
