--- a/OneWiki/data/Evil Group Crew.wiki
+++ b/OneWiki/data/Evil Group Crew.wiki
@@ -1,13 +1,16 @@
 ﻿++ Evil Group Crew
 
-19 people
+20 people
+5 horses
+total food 35
 
 [Dockson]
 [Anton]
 [Taman]
 [Marta]
 
-[Kerri]  - not present
+[Kerri]
+[Greg]
 
 [Darvin] - Human slave, used to be marine private - Proficient short sword
 [Fargrim] - Dwarf Wizard, came from [Nowa Huta]
@@ -25,3 +28,6 @@ Grogar
 
 3 pups
 1 wolf
+
+5 horses  (3 lbs per day)
+
