adding new group notes

--- a/OneWiki/data/Fiore.wiki
+++ b/OneWiki/data/Fiore.wiki
@@ -113,7 +113,7 @@ Places of interest in Mayara:
       
       Carpenter's Guild (the Carps)
         This guild is comprised mostly of elves who work indipendently of elegant wooden furniture and architecture, with other races amungst them, excluding dwarves. They have an extensive library of carpentry techniques and patterns, amungst the books the [Legend of Regdar] can be found, due to it's references of ancient elvish architectures. 
-        The Carpenter's guild is ran by the pretentious Jerrod Louverre (wood elf) a master carpenter who believes the best craftsmanship is done by indipendent and intensive study and frequent practice. Thinks poorly of the Mason's Guild.
+        The Carpenter's guild is ran by the pretentious Jerrod Louverre (wood elf, wife is in [Nowa Huta]) a master carpenter who believes the best craftsmanship is done by indipendent and intensive study and frequent practice. Thinks poorly of the Mason's Guild.
       
       Mason's Guild (the Masos)
         This guild is comprised mostly of dwarves who work in a disciplined manner in teams making bricks and stone works of art. Other races are amungst them, excluding elves. 
