--- a/OneWiki/data/Group Three Notes.wiki
+++ b/OneWiki/data/Group Three Notes.wiki
@@ -31,7 +31,6 @@ captured a Blink Dog and are keeping it asleep with the use of nightshade
 ++++Session 3
 upgrading a bow (3 days needed) + chicken
 Quinn slew 2 boars to exchange for bow upgrade
-100xp boarsx2
 
 Serana to be intimate with Nanderdar for a upgraded long bow.
 
@@ -39,3 +38,5 @@ Quinns says to meet Namaine at the bar in 2 days
 
 Slew the druids Marden and Collette
 Faught Queen Kalista at the base of the tree Corellon
+
+need to level up after next long rest
