adding evil group session notes

--- a/OneWiki/data/3 Helms Deep.wiki
+++ b/OneWiki/data/3 Helms Deep.wiki
@@ -12,6 +12,7 @@ Populous:
     
 Migrating from Augsburg:
     Mayor Ubring and daughter Anabel
+    -Guarded by a [Marines] captain, officer, 8 privates
     
     
 -Market Square: Merchants include:  
