--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -251,3 +251,41 @@ Lightning fishes with the corpse of Lander Koll and attracts 3 sharks which are 
 Croaker discovers the nature of his Fruit power
 
 the group escorts Robert Culliford & crew to the archipalego of Mahogany
+
+++++Session 21
+Robert Culliford joins the group to 3 Helms Deep
+-keeps his crew on the ship
+
+Tension between Mayor Ubring's hired marines and some of don krieg's men is making people uneasy
+
+Edan buys Luthadel tapestry for 8g for Mr Maej
+
+Grix goes to talk with Mayor Ubring about being a Reagant of 3 Helms Deep
+Prescilla the servant is given the day off
+-the palace is clear of people
+
+5 on top
+7 middle
+
+Battle with Robert Culliford's crew:
+-Darvin killed in the cross fire when attacking Robert's ship
+-Maps to places not traveled yet on Roberts ship
+-looted 2000g 
+
+TODO - new maps/locations
+     - eldrich blast correction
+     
+Carpenters guild improving Grogar's carpenter's quarterstaff with shark 6 large teeth     
+
+Mayor TODO:
+    - do census
+    - set taxes
+    - building treasury
+    - trade
+    
+    Sold to Shirrong
+    18g studded leather x4  (gnomish)
+    7s dagger   x35
+    3g short sword  x61
+    25g chainmail  x52
+    9g shortbow  x61
