--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -151,14 +151,10 @@ Rimardo's House
    - green feather
    - mechanical contraption drawing
    
-Grogar aquires the Dodo Bird power
-
-Keiger - [Kord] has his soul   
+Grogar aquires the Dodo Bird power   
 
 Acquired Regdar's sword hilt
 
-Giant Shark slain - X
-Hunted down some wolves - XXXXXXXXXXX
 Carpenters completed the cannon mounts on the Sailing ship      
 
 ++++Session 16 notes:
@@ -167,11 +163,6 @@ Carpenters completed the cannon mounts on the Sailing ship
   Statue of Pelor from the [Fiore] temple of elysium - Cleric focus
   
   bringing the 21 servant (Marta) with them to [Augsburg]
-  
-  Augsburg [Marines] presence:
-  1 captain
-  2 officers
-  10 privates
    
   Taman given anarchy to "check out"
   
@@ -223,9 +214,7 @@ Edan wagers 500g that he himself wins
 [Taman] wagers 15g that Edan wins
 Entries:
 Grogar - wagers 20p 45g that Grogar gets 2nd place
-Anton - 
-Lightning - 
-Edan - 
+Anton, Lightning, Edan 
 
 Finals: Edan - Grogar - Grom Malamoog - Robert Culliford
 
@@ -254,34 +243,21 @@ the group escorts Robert Culliford & crew to the archipalego of Mahogany
 
 ++++Session 21
 Robert Culliford joins the group to 3 Helms Deep
--keeps his crew on the ship
 
 Tension between Mayor Ubring's hired marines and some of don krieg's men is making people uneasy
 
 Edan buys Luthadel tapestry for 8g for Mr Maej
 
-Grix goes to talk with Mayor Ubring about being a Reagant of 3 Helms Deep
+Grix goes to talk with Mayor Ubring about being a Reagant of [3 Helms Deep]
 Prescilla the servant is given the day off
 -the palace is clear of people
 
-5 on top
-7 middle
-
-Battle with Robert Culliford's crew:
+Battle with [Robert Culliford]'s crew:
 -Darvin killed in the cross fire when attacking Robert's ship
 -Maps to places not traveled yet on Roberts ship
 -looted 2000g 
-
-TODO - new maps/locations
-     - eldrich blast correction
      
 Carpenters guild improving Grogar's carpenter's quarterstaff with shark 6 large teeth     
-
-Mayor TODO:
-    - do census
-    - set taxes
-    - building treasury
-    - trade
     
     Sold to Shirrong
     18g studded leather x4  (gnomish)
