--- a/OneWiki/data/Group Three Notes.wiki
+++ b/OneWiki/data/Group Three Notes.wiki
@@ -40,3 +40,6 @@ Slew the druids Marden and Collette
 Faught Queen Kalista at the base of the tree Corellon
 
 need to level up after next long rest
+
+++++Session 4
+the group is joined by [Tessa] [Shay]
