--- a/OneWiki/data/Krieger.wiki
+++ b/OneWiki/data/Krieger.wiki
@@ -2,4 +2,22 @@
 
 Tiefling scorcerer who joined the evil group via the inn at Mayara
 
-consumed the Dragon fruit
+consumed the Dragon [AkumaFruits]
+
+his soul is held by the [Crones of Neriak]
+
+Kreiger soul memories:    
+    Memories fill your mind of a foggy, dreary place in a dead-wooded area of Faydwer. 
+    Your parents, struggling for life as they were, hastily fleeing from a firey glow in the distance.  
+    Rowing out to sea. 
+    For days.
+    Rowing.
+    Through the fog.
+    It felt like forever.
+    Landing eventually at somewhere unknown.
+    Lead into a cave where your parents pleaded with some hideous elders.
+    Pleading for help.
+    Pleading for strength.
+    Pleading for magic.
+    ...
+    You then woke up in Luthadel some time later, alone.
