adding notes for the new group

--- a/OneWiki/data/Group Three Notes.wiki
+++ b/OneWiki/data/Group Three Notes.wiki
@@ -1,7 +1,7 @@
 ﻿++ Group Three Notes
 
 CALENDAR
-XXXX
+XXXXX
 
 The group finds themselves marooned on an unknown island. Waking up after a terrible storm.
 Thier supply vessel had 3 other crewmates who are now washed ashore with them. Only these three managed to survive.
@@ -34,7 +34,7 @@ Quinn slew 2 boars to exchange for bow upgrade
 
 Serana to be intimate with Nanderdar for a upgraded long bow.
 
-Quinns says to meet Namaine at the bar in 2 days
+Quinns says to meet Namaine at the bar in 2 days XX
 
 Slew the druids Marden and Collette
 Faught Queen Kalista at the base of the tree Corellon
@@ -43,3 +43,26 @@ need to level up after next long rest
 
 ++++Session 4
 the group is joined by [Tessa] [Shay]
+Serana acquires Nanerdar's personal +1 TH longbow
+
+Shay charmed by the Queen in the late evening
+
+Quinn booped on head with large quarterstaff
+
+day2
+3 students slain, revived
+Quinn, Whap, Tessa, Shay booped
+
+
+Forem - Wooden Stool + 3lbs food in exchange for 20 silver arrows (2 days)
+Forem - Sharpening Axe for 2lbs of food (+1 dmg for next 5 hits) (1 day)
+Berea - Wooden Stool in exchange for 10lbs of food
+
+Quinn kills two bears
+
+Tailor to improve Quinns armor with bear fur in exchange for the access bear fur (2 days)
+
+day3
+Quinn & Whap steal 1500gold - 300lb from the Temple of the Forgotten
+Shay and Tessa get knocked unconcious from "boops" from the queen and are taken by the High Cleric Namaine to heal
+Quinn & Whap rest at the boat
