adding group 3 notes

--- a/OneWiki/data/Group Three Notes.wiki
+++ b/OneWiki/data/Group Three Notes.wiki
@@ -1,7 +1,10 @@
 ﻿++ Group Three Notes
 
 CALENDAR
-XXXXX
+XXXXXXX
+
+KEELBOAT WORK (of 20)
+XX
 
 The group finds themselves marooned on an unknown island. Waking up after a terrible storm.
 Thier supply vessel had 3 other crewmates who are now washed ashore with them. Only these three managed to survive.
@@ -9,8 +12,10 @@ You do not recall why or where you are, but by the looks of things, you were out
 
 Near the center of the island is a massive tree like none you've ever seen, it's presence is unmissable even beyond the dense forest that you've crashed upon 
 
-Supplies: 100lbs of beans, 100lbs of potatos, 100lbs corn, 100lbs carrots  16
+Supplies: 100lbs of beans, 100lbs of potatos, 100lbs corn, 100lbs carrots
           Order Ticket, deliver goods to Fiore E Dock, pickup 400lbs of meat/herbs
+          40lbs of each food is left after pilfering, 160lbs left
+          160lbs given to the keelboat workforce 
 
 Three people:
 2 dockworkers
@@ -63,6 +68,35 @@ Quinn kills two bears
 Tailor to improve Quinns armor with bear fur in exchange for the access bear fur (2 days)
 
 day3
-Quinn & Whap steal 1500gold - 300lb from the Temple of the Forgotten
+Quinn & Whap steal 14990gold - 300lb from the Temple of the Forgotten
 Shay and Tessa get knocked unconcious from "boops" from the queen and are taken by the High Cleric Namaine to heal
+-wake up later in Namaine's house
 Quinn & Whap rest at the boat
+
+++++Session 5
+day 4
+Shay and Tessa speak with the queen and arrange for a boat to be built
+whap slays a brown bear and befriends a doof dog
+
+keelboats = 3000g
+15 people 75g per day, 40 days to completion
+20 days with ship salvage.  
+300lb + 2ton + 2trees
+ -160lbs
+
+given a map with the location for food/oak wood on the back of the inventory ticket to Berea for crafting the keelboat
+
+Geral needs in exchange for 2 tons of elvish stone: repaired masons tools, 15lbs of food, ale, goat
+
+masons tools will be delivered to the Mason when repaired by Forem
+
+40lbs of vegetables for a goat
+
+Geral gives 500lbs of stone for what is given so far.
+
+day 5 - festival
+Thrasher - former mastiff that is "Doof Dog"
+
+Gifts at the festival
+bundle of 20 silver arrows. bear fur armor, sharpened axe, book legend of regdar, bag of feathers
+
